updated api documentation
